# Pico_CapTouch_ePaper

./: README.md  Version_CN.txt  Version_EN.txt
c/: CMakeLists.txt  main.c
c/extra_uf2/: epd.uf2  epd_4Gray.uf2
c/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
c/lib/Driver/: CMakeLists.txt  ICNT86X.c
c/lib/e-Paper/: CMakeLists.txt  EPD_2in9_V2.c
python/: Pico_CapTouch_ePaper_Test_2in9.py  ReadmeCN.txt  ReadmeEN.txt
